--- a/charts/k8s-monitoring/values.yaml
+++ b/charts/k8s-monitoring/values.yaml
@@ -94,6 +94,12 @@ externalServices:
     # -- (string) (required) Tempo host where traces will be sent
     host: ""
 
+    # -- (string) The type of server protocol for writing metrics
+    # Options:
+    #   * "otlp" will use OTLP
+    #   * "otlphttp" will use OTLP HTTP
+    protocol: "otlp"
+
     # -- (string) (optional) Tempo tenant ID
     tenantId: ""
 
